# AlbumDuel

./: .gitignore  README.md  docker-compose.yml  run.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: aoty.py  aoty_router.py  artwork_resolver.py  auth.py  auth_status.py  db.py  imports.py  lastfm.py  main.py  merge_duplicates.py  migrations_note_exclude.txt  models.py  schemas.py  spotify.py  spotify_resolver.py
backend/app/core/: config.py  elo.py
docs/: aoty-integration.md  integrations.md  plan.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  coverUtils.ts  main.tsx  styles.css  token.ts
frontend/src/components/: AOTYImport.tsx  AuthStatus.tsx  ConnectSpotify.tsx  Duel.tsx  ImportDemo.tsx  LastfmConnect.tsx  Leaderboard.tsx  Sources.tsx  SpotifyCallback.tsx  SpotifyImportTop.tsx  Stats.tsx
