[tool.poetry]
name = "albumduel-backend"
version = "0.1.0"
description = "AlbumDuel FastAPI backend for Elo-based album rankings"
authors = ["AlbumDuel Contributors"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
album-of-the-year-api = "^0.2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
